Commenting out all redirects

--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -1,58 +1,58 @@
-redirects:
-    getting-started/getting-started: ./README.md
-    getting-started/getting-started/text-search: ./README.md
-    getting-started/getting-started/associated-diseases: ./README.md
-    getting-started/getting-started/associated-targets: ./README.md
-    getting-started/getting-started/target-profile: ./README.md
-    getting-started/getting-started/disease-profile: ./README.md
-    getting-started/getting-started/drug-summary/pharmacovigilance: ./README.md
-    getting-started/getting-started/filtering-associations: ./README.md
-    getting-started/evidence: ./README.md
-    getting-started/scoring: ./README.md
-    getting-started/target-safety: ./README.md
-    getting-started/target-tractability: ./README.md
-    getting-started/baseline-expression: ./README.md
-    getting-started/batch-search: ./README.md
-    getting-started/data-download: ./README.md
-    getting-started/citation: ./README.md
-    getting-started/contact: ./README.md
-    data-sources/data-sources: ./README.md
-    data-sources/genetic-associations: ./README.md
-    data-sources/somatic-mutations: ./README.md
-    data-sources/drugs: ./README.md
-    data-sources/affected-pathways: ./README.md
-    data-sources/rna-expression: ./README.md
-    data-sources/text-mining: ./README.md
-    data-sources/animal-models: ./README.md
-    programmatic-access/rest-api: ./README.md
-    programmatic-access/python-client: ./README.md
-    programmatic-access/api-tutorials: ./README.md
-    programmatic-access/api-tutorials/find-the-id-of-a-target-or-disease: ./README.md
-    programmatic-access/api-tutorials/how-to-get-more-than-10k-targets-associated-with-one-disease: ./README.md
-    programmatic-access/api-tutorials/get-diseases-and-drug-information-with-python: ./README.md
-    programmatic-access/api-tutorials/get-genetic-variants-associated-with-a-disease: ./README.md
-    faq/frequently-asked-questions: ./README.md
-    faq/describing-diseases: ./README.md
-    faq/what-can-i-search-for: ./README.md
-    faq/why-does-my-search-term-return-so-many-results: ./README.md
-    faq/what-is-a-target: ./README.md
-    faq/direct-and-indirect-associations: ./README.md
-    faq/genome-assembly: ./README.md
-    faq/how-variants-are-assigned-to-genes: ./README.md
-    faq/how-do-you-compute-target-and-disease-similarities: ./README.md
-    faq/missing-association: ./README.md
-    faq/association-score: ./README.md
-    faq/tissue-specificity: ./README.md
-    faq/what-is-target-tractability: ./README.md
-    faq/bibliography: ./README.md
-    faq/variants-or-mutations: ./README.md
-    faq/clinical-trials: ./README.md
-    faq/transgenic-animal-models: ./README.md
-    faq/how-can-i-export-the-search-results-as-a-table: ./README.md
-    faq/spin-your-own-instance: ./README.md
-    faq/add-your-own-data: ./README.md
-    faq/privacy-and-tracking: ./README.md
-    faq/do-i-need-a-license-to-use-third-party-data-available-in-the-open-targets-platform: ./README.md
-    technical-pipeline/infrastructure: ./README.md
-    outreach/training-sessions: ./README.md
-    outreach/latest-training-materials: ./README.md
+# redirects:
+#     getting-started/getting-started: ./README.md
+#     getting-started/getting-started/text-search: ./README.md
+#     getting-started/getting-started/associated-diseases: ./README.md
+#     getting-started/getting-started/associated-targets: ./README.md
+#     getting-started/getting-started/target-profile: ./README.md
+#     getting-started/getting-started/disease-profile: ./README.md
+#     getting-started/getting-started/drug-summary/pharmacovigilance: ./README.md
+#     getting-started/getting-started/filtering-associations: ./README.md
+#     getting-started/evidence: ./README.md
+#     getting-started/scoring: ./README.md
+#     getting-started/target-safety: ./README.md
+#     getting-started/target-tractability: ./README.md
+#     getting-started/baseline-expression: ./README.md
+#     getting-started/batch-search: ./README.md
+#     getting-started/data-download: ./README.md
+#     getting-started/citation: ./README.md
+#     getting-started/contact: ./README.md
+#     data-sources/data-sources: ./README.md
+#     data-sources/genetic-associations: ./README.md
+#     data-sources/somatic-mutations: ./README.md
+#     data-sources/drugs: ./README.md
+#     data-sources/affected-pathways: ./README.md
+#     data-sources/rna-expression: ./README.md
+#     data-sources/text-mining: ./README.md
+#     data-sources/animal-models: ./README.md
+#     programmatic-access/rest-api: ./README.md
+#     programmatic-access/python-client: ./README.md
+#     programmatic-access/api-tutorials: ./README.md
+#     programmatic-access/api-tutorials/find-the-id-of-a-target-or-disease: ./README.md
+#     programmatic-access/api-tutorials/how-to-get-more-than-10k-targets-associated-with-one-disease: ./README.md
+#     programmatic-access/api-tutorials/get-diseases-and-drug-information-with-python: ./README.md
+#     programmatic-access/api-tutorials/get-genetic-variants-associated-with-a-disease: ./README.md
+#     faq/frequently-asked-questions: ./README.md
+#     faq/describing-diseases: ./README.md
+#     faq/what-can-i-search-for: ./README.md
+#     faq/why-does-my-search-term-return-so-many-results: ./README.md
+#     faq/what-is-a-target: ./README.md
+#     faq/direct-and-indirect-associations: ./README.md
+#     faq/genome-assembly: ./README.md
+#     faq/how-variants-are-assigned-to-genes: ./README.md
+#     faq/how-do-you-compute-target-and-disease-similarities: ./README.md
+#     faq/missing-association: ./README.md
+#     faq/association-score: ./README.md
+#     faq/tissue-specificity: ./README.md
+#     faq/what-is-target-tractability: ./README.md
+#     faq/bibliography: ./README.md
+#     faq/variants-or-mutations: ./README.md
+#     faq/clinical-trials: ./README.md
+#     faq/transgenic-animal-models: ./README.md
+#     faq/how-can-i-export-the-search-results-as-a-table: ./README.md
+#     faq/spin-your-own-instance: ./README.md
+#     faq/add-your-own-data: ./README.md
+#     faq/privacy-and-tracking: ./README.md
+#     faq/do-i-need-a-license-to-use-third-party-data-available-in-the-open-targets-platform: ./README.md
+#     technical-pipeline/infrastructure: ./README.md
+#     outreach/training-sessions: ./README.md
+#     outreach/latest-training-materials: ./README.md
